Fix #538 - Darken buttons to increase contrast

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -1,5 +1,5 @@
 .button {
-  background-color: $color4;
+  background-color: darken($color4, 3%);
   font-family: inherit;
   display: inline-block;
   position: relative;
